projects/ngx-formentry/src/components/ngx-tabset/components/ngx-tab-set.component.scss
.tab {
  width: 10rem;
  position: fixed;
}

.tab button {
  font-family: inherit;
  display: block;
  background-color: inherit;
  width: 100%;
  border: none;
  outline: none;
  text-align: left;
  transition: 0.3s;
  min-height: 2rem;
  white-space: normal;
  word-wrap: break-word;
  margin: 0 0 0.063rem;

  :hover {
    cursor: pointer;
  }
}

@media screen and (max-width: 768px) {
  .tab button {
    height: 3rem;
    border-bottom: 0.0125rem solid var(--open-mrs-background-gray);
    width: 10rem;
  }
}

/* Change background color of buttons on hover */
.tab button.active.hover {
  background-color: var(--gray-gray-10);
}

.tab button.enabled.hover {
  background-color: var(--gray-gray-10);
}

.tab button.enabled.hover {
  background-color: var(--gray-gray-10);
}
/* Create an active/current "tab button" class */
.tab button.completed {
  border-left: 0.5rem solid var(--inverse-support-02);
  background-color: var(--color-green-10);
  font-size: 0.875rem;
  font-weight: normal;
  font-stretch: normal;
  font-style: normal;
  line-height: 1.43;
  letter-spacing: 0.16px;
  color: #161616;
}

.tab button.active {
  background-color: #ededed;
  border-left: 0.5rem solid #009d9a;
  font-size: 0.875rem;
  font-weight: 600;
  font-stretch: normal;
  font-style: normal;
  line-height: 1.43;
  letter-spacing: 0.16px;
  color: #161616;
}

.tab button.enabled {
  background-color: #ffffff;
  border-left: 0.5rem solid #9ef0f0;
  font-size: 0.875rem;
  font-weight: normal;
  font-stretch: normal;
  font-style: normal;
  line-height: 1.43;
  letter-spacing: 0.16px;
  color: var(--color-gray-100);
}

.tab button.error {
  background-color: var(--color-red-10);
  border-left: 0.5rem solid var(--open-mrs-danger-red-60);
  font-size: 0.875rem;
  font-weight: normal;
  font-stretch: normal;
  font-style: normal;
  line-height: 1.29;
  letter-spacing: 0.16px;
  color: #da1e28;
}

.tab button.disabled {
  background-color: #ffffff;
  border-left: 0.5rem solid #dae0e0;
  font-size: 0.875rem;
  font-weight: normal;
  font-stretch: normal;
  font-style: normal;
  line-height: 1.43;
  letter-spacing: 0.16px;
  color: var(--gray-gray-30);
}
.tab button.active.error {
  background-color: var(--color-red-20);
  border-left: 0.5rem solid var(--open-mrs-danger-red-60);
  font-size: 0.875rem;
  font-weight: 600;
  font-stretch: normal;
  font-style: normal;
  line-height: 1.29;
  letter-spacing: 0.16px;
  color: #da1e28;
}

.tab-container {
  display: grid;
  grid-template-columns: 179px auto;
}

.tab-content {
  overflow-x: hidden;
}

